--- a/index.css
+++ b/index.css
@@ -1,3 +1,19 @@
+@font-face {
+     font-family: "Lora";
+     src: url(fonts/lora/Lora-Variable.ttf);
+}
+
+@font-face {
+     font-family: "LoraItalic";
+     src: url(fonts/lora/Lora-VariableItalic.ttf);
+}
+
+body{
+     background-color: #fdf6e3;
+}
+
 .heading {
+     font-family: "Lora", serif;
+     font-weight: 700;
      color: #990000
 }
