--- a/index.css
+++ b/index.css
@@ -327,6 +327,10 @@ body {
   margin: 0.6em 0.8em;
 }
 
+.unlink {
+  text-decoration: none;
+}
+
 .lora {
   font-family: "Lora", serif;
   color: #000000;
